<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/baseRequest" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

         <requestFocus />
         
        <RadioButton
            android:id="@+id/stuffedCrust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/base1String" />

        <RadioButton
            android:id="@+id/thinAndCrispy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base2String" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choiceRequest" />

    <CheckBox
        android:id="@+id/mushrooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping1" />

    <CheckBox
        android:id="@+id/sweetcorn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping2" />

    <CheckBox
        android:id="@+id/onions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping3" />

    <CheckBox
        android:id="@+id/peppers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topping4" />

	<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/extraRequest" />

		<ToggleButton
		    android:id="@+id/toggleExtraCheese"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textOn="Yes"
		    android:textOff="No" />
	    
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailRequest" />

    <EditText
        android:id="@+id/deliveryEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" >
    </EditText>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submitRequest" />
  </LinearLayout>

</ScrollView>